# developtools_ace_ets2bundle

./: .gitattributes  .gitignore  AGENTS.md  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  build_ets_loader_library.py  bundle.json  generateSysResource.py  install_arkguard_tsc.py  install_arkguard_tsc_declgen.py  koala_integration.gni
arkui-plugins/: .gitignore  .prettierrc  AGENTS.md  BUILD.gn  babel.config.js  build_ui_plugins.py  custom-import-plugin.js  jest-test.ci.config.js  jest-test.config.js  jest-test.config.ts  npm_preinstall.sh  package-lock.json  package.json  path.ts  tsconfig.build.json  tsconfig.json
arkui-plugins/collectors/: collector.ts  namespace-collector.ts
arkui-plugins/collectors/memo-collectors/: factory.ts  function-collector.ts  memo-visitor.ts  utils.ts
arkui-plugins/collectors/ui-collectors/: call-record-collector.ts  chaining-call-data-source.ts  condition-scope-collector.ts  factory.ts  global-class-collector.ts  normal-class-collector.ts  normal-interface-collector.ts  shared-types.ts  struct-collector.ts  struct-interface-collector.ts  ui-visitor.ts  utils.ts
arkui-plugins/collectors/utils/: collect-types.ts
arkui-plugins/common/: abstract-visitor.ts  annotation-utils.ts  arkts-utils.ts  debug.ts  declaration-collector.ts  etsglobal-remover.ts  file-manager.ts  gensym-generator.ts  import-collector.ts  import-info.ts  importer.ts  log-collector.ts  lru-cache.ts  metadata-collector.ts  node-cache.ts  path-resolvers.ts  plugin-context.ts  predefines.ts  print-visitor.ts  program-skipper.ts  program-visitor.ts  safe-types.ts  use-improved-memo-plugin.ts  utils.ts
arkui-plugins/common/cache/: astNodeRevisitCache.ts
arkui-plugins/interop-plugins/: arkuiImportList.ts  decl-transformer.ts  decl_transformer.ts  emit-transformer.ts  emit_transformer.ts  index.ts  interop_plugin.ts  types.ts
arkui-plugins/memo-improved/: MemoFactory.ts  common.ts  entry.ts  index.ts  inference-helpers.ts
arkui-plugins/memo-improved/analysis/: Analysis.ts  AnalysisPropagationVisitor.ts  ParamInfoBuilder.ts  PostAnalysis.ts  utils.ts
arkui-plugins/memo-improved/diagnostics/: DiagnosticVisitor.ts  Reporter.ts  ScopedVisitor.ts  ToArrayVisitor.ts
arkui-plugins/memo-improved/parsed/: ParsedTransformer.ts
arkui-plugins/memo-improved/transform/: BodiesTransformer.ts  FunctionTransformer.ts  MemoTransformer.ts  SignatureTransformer.ts  utils.ts
arkui-plugins/memo-plugins/: function-transformer.ts  import-transformer.ts  index.ts  internal-transformer.ts  memo-cache-factory.ts  memo-factory.ts  memo-transformer.ts  parameter-transformer.ts  return-transformer.ts  signature-transformer.ts  utils.ts
arkui-plugins/test/: arktsconfig_gen.js  arktsconfig_template.json  jest.config.js  localtest_config.js  localtest_decl_config.js  package-lock.json  package.json  retest.sh  test_advanced_ui.js  test_xts.js  test_xts.py  tsconfig.test.json
arkui-plugins/test/local/: @ohos.arkui.component.column.d.ets  @ohos.arkui.component.common.d.ets  @ohos.arkui.component.customComponent.d.ets  @ohos.arkui.component.d.ets  @ohos.arkui.component.enums.d.ets  @ohos.arkui.component.styledString.d.ets  @ohos.arkui.component.text.d.ets  @ohos.arkui.component.units.d.ets  @ohos.arkui.external.resource.d.ets  @ohos.arkui.stateManagement.d.ets  @ohos.arkui.stateManagement.runtime.d.ets  @ohos.arkui.stateManagement.storage.d.ets
arkui-plugins/test/unit/: model.ts  unittest.test.ts
arkui-plugins/test/utils/: artkts-config.ts  cache.ts  compile.ts  global.ts  hash-generator.ts  parse-string.ts  path-config.ts  plugin-driver.ts  plugin-tester.ts  processor-builder.ts  safe-types.ts  serializable.ts  shared-types.ts  simplify-dump.ts  task-processor.ts
arkui-plugins/ui-plugins/: builder-lambda-transformer.ts  checked-cache-factory.ts  checked-transformer.ts  component-transformer.ts  customdialog.ts  import-collector.ts  index.ts  initstatevar.ts  interop.ts  legacy-transformer.ts  name-collector.ts  namespace-processor.ts  preprocessor-transform.ts  printer-transformer.ts  router.ts  struct-transformer.ts  ui-factory.ts  utils.ts
arkui-plugins/ui-plugins/builder-lambda-translators/: bindable-factory.ts  builder-factory.ts  builder-lambda-transformer.ts  cache-factory.ts  condition-scope-visitor.ts  factory.ts  style-internals-visitor.ts  utils.ts
arkui-plugins/ui-plugins/condition-scope-translators/: condition-scope-factory.ts  condition-scope-visitor.ts
arkui-plugins/ui-plugins/entry-translators/: cache-factory.ts  entry-transformer.ts  entry.ts  factory.ts  utils.ts
arkui-plugins/ui-plugins/insight-intent/: insight-intent-collector.ts  insight-intent-handler.ts  resource-source-cache.ts
arkui-plugins/ui-plugins/interop/: builder-interop.ts  initstatevar.ts  interop.ts  legacy-transformer.ts  predefines.ts  provide.ts  utils.ts
arkui-plugins/ui-plugins/memo-collect-cache/: base.ts  index.ts
arkui-plugins/ui-plugins/property-translators/: base.ts  builderParam.ts  cache-factory.ts  componentLifecycle.ts  computed.ts  consume.ts  consumer.ts  customEnv.ts  env.ts  event.ts  (+29 more)
arkui-plugins/ui-syntax-plugins/: index.ts
ets1.2/: .gitignore  BUILD.gn  koala_integration.gni  package.json
ets1.2/build-common/: package.json  tsconfig.json
ets1.2/common/: package.json  tsconfig.json
ets1.2/compat/: package.json  tsconfig.json  ui2abcconfig.json
ets1.2/gn/: npm_util.gni
ets1.2/interop/: BUILD.gn  package.json  tsconfig.json  ui2abcconfig-test.json  ui2abcconfig.json
ets1.2/libarkts/: .mocharc.json  .prettierrc  BUILD.gn  arktsconfig-direct.json  arktsconfig.json  package.json  rollup.es2panda.mjs  rollup.libarkts.mjs  tsconfig.json
koala-wrapper/: .gitignore  .gitlab-ci.yml  BUILD.gn  arktsconfig.json  babel.config.js  build_ts_wrapper.py  koalaui-transform.js  package-lock.json  package.json  tsconfig.json
koala-wrapper/native/: BUILD.gn  meson.build  meson_options.txt
koala-wrapper/src/: Es2pandaEnums.ts  Es2pandaNativeModule.ts  InteropNativeModule.ts  es2panda.ts  reexport-for-generated.ts  utils.ts
koala-wrapper/tools/: issue_gen.mjs
(+4721 files in other folders)
