# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/config/components/ets_frontend/ets2abc_config.gni")

if (!defined(koala_mr)) {
# OHOS build tree workaround
    import("../koala_integration.gni")
}
if (!koala_mr.is_rri) {
    import("//build/ohos.gni")
}
import("${koala_mr.imports_prefix}/npm.gni")

ohos_static_library("libarkts_package") {
    deps = [
        "${koala_mr.libarkts_path}:libarkts_copy"
    ]
    part_name = "ace_ets2bundle"
    subsystem_name = "developtools"
}

ohos_copy("ets2panda_libarkts") {
  deps = [ "${koala_mr.libarkts_path}:libarkts_sdk_copy" ]
  sources = [ rebase_path("$target_gen_dir") + "/libarkts" ]
  outputs = [ target_out_dir + "/$target_name" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
  subsystem_name = "developtools"
  part_name = "ace_ets2bundle"
}

ohos_copy("ohos_ets_libarkts") {
  deps = [ "${koala_mr.libarkts_path}:libarkts_sdk_copy" ]
  sources = [ rebase_path("$target_gen_dir") + "/libarkts" ]
  outputs = [ ohos_ets_libarkts_path ]
  subsystem_name = "developtools"
  part_name = "ace_ets2bundle"
}