# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

koala_mr = {
    root_path = "//developtools/ace_ets2bundle/ets1.2"
    scripts_path = "$root_path/gn/script"
    imports_prefix = "$root_path/gn/import"
    libarkts_path = "$root_path/libarkts"
    interop_path = "$root_path/interop"
    is_rri = false
}

node_version = "v16.20.2"
host_arch = "${host_os}-${host_cpu}"
koala_node_path = rebase_path("//prebuilts/build-tools/common/nodejs/node-${node_version}-${host_arch}/bin")
