# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

npm_path = "//prebuilts/build-tools/common/nodejs/current/bin/npm"

action("gen_sdk_ts_wrapper") {
  script = "build_ts_wrapper.py"
  deps = [ "./native:es2panda" ]
  args = [
    "--source_path",
    rebase_path(get_path_info(".", "abspath")),
    "--output_path",
    rebase_path("$target_gen_dir"),
    "--npm",
    rebase_path(npm_path),
    "--current_os",
    "$current_os",
    "--root_out_dir",
    rebase_path(root_out_dir),
  ]

  outputs = [ "$target_gen_dir" ]
}

ohos_copy("ets2panda_koala_wrapper") {
  deps = [ ":gen_sdk_ts_wrapper" ]
  sources = [ rebase_path("$target_gen_dir") ]
  outputs = [ target_out_dir + "/$target_name" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
  subsystem_name = "developtools"
  part_name = "ace_ets2bundle"
}
