# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (!defined(koala_mr)) {
    # OHOS build tree workaround
    import("../../koala_integration.gni")
}
if (!koala_mr.is_rri) {
    import("//build/config/components/ets_frontend/ets2abc_config.gni")
    import("//build/ohos.gni")
}
import("${koala_mr.imports_prefix}/npm.gni")

if (defined(koala_mr.ui2abc_path)) {
    npm_cmd("interop_abc") {
        outputs = [
            "$target_out_dir/interop.abc"
        ]
        if (!koala_mr.is_rri) {
            project_path = rebase_path("..")
            run_tasks = [ "build:interop" ]
        } else {
            project_path = rebase_path(".")
            run_tasks = [ "build" ]
        }

        deps = [
            "${koala_mr.ui2abc_path}:ui2abc_base"
        ]

        if (!koala_mr.is_rri) {
            external_deps = [
                ets2abc_build_deps,
                static_linker_build_deps
            ]
        }
    }
}

npm_cmd("interop_compile") {
    outputs = [
        "$target_out_dir/interop_compile"
    ]
    if (!koala_mr.is_rri) {
        project_path = rebase_path("..")
        run_tasks = [ "compile:interop" ]
    } else {
        project_path = rebase_path(".")
        run_tasks = [ "compile" ]
    }
}